# HeisenbergSpinChains

./: .gitignore  Makefile  ParticleLatticeEigenvalues.ipynb  README.md  pyproject.toml
misc/: Energy_OpenChain.txt
src/: speed_test.py
src/lattice/: LatticeGenerator.py  common.py  datatypes.py  graph.py  lattice.py  lattice_sparse.py
