[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Scott Briggs-McPhail", email = "smac1@uab.edu"},
]
dependencies = [
    "numpy>=1.23.5",
    "seaborn>=0.12.1",
    "scipy>=1.9.3",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
